All 4 APIs with Details Activity

--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -21,14 +21,25 @@
         android:id="@+id/movie_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="sobsbvjv"
         android:layout_below="@+id/specificimage"
         android:layout_centerHorizontal="true"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="wrap_content"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/DetailViewer"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/movie_name" />
+        android:layout_below="@+id/movie_name">
+
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/pager_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:paddingBottom="4dp"
+            android:paddingTop="4dp" />
+
+    </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
