--- a/app/src/main/res/layout/movies_card.xml
+++ b/app/src/main/res/layout/movies_card.xml
@@ -4,30 +4,33 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
     card_view:cardCornerRadius="8dp"
-    card_view:cardUseCompatPadding="true"
-    android:layout_marginBottom="16dp">
+    card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
+        android:id="@+id/rlmoviescontainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#000000"
+        android:clickable="true">
 
         <ImageView
             android:id="@+id/moviecover"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"/>
+            android:adjustViewBounds="true" />
 
         <TextView
             android:id="@+id/moviename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_below="@+id/moviecover"
-            android:background="#aaac"
-            android:textSize="13sp"
-            android:textColor="#ffffff"
+            android:background="#424242"
             android:gravity="center_horizontal"
-            android:layout_alignParentBottom="true"/>
+            android:textColor="#ffffff"
+            android:textSize="13sp" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
